租户管理 初稿

--- a/zh-CN/6.manage/2.tenant-management/3.introduction-of-user-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/3.introduction-of-user-tenant.md
@@ -15,15 +15,15 @@
 
 在用户租户下创建的用户，只能登录到本租户，对其他租户不可见。
 
-* 对于 MySQL 兼容模式的租户，可以从 mysql.user 视图中查询用户信息。
-* 对于 Oracle 兼容模式的租户，可以从 ALL_USERS 视图中查询用户信息。
+* 对于 MySQL 兼容模式的租户，可以从 `mysql.user` 视图中查询用户信息。
+* 对于 Oracle 兼容模式的租户，可以从 `ALL_USERS` 视图中查询用户信息。
 
 在用户租户下可以创建表，创建后对其他租户不可见。
 
-* 对于 MySQL 兼容模式的租户，可以从 information_schema.tables 视图中查询本租户所有用户表的信息。
-* 对于 Oracle 兼容模式的租户，可以从 ALL_TABLES 视图中查询本租户所有用户表的信息。
+* 对于 MySQL 兼容模式的租户，可以从 `information_schema.tables` 视图中查询本租户所有用户表的信息。
+* 对于 Oracle 兼容模式的租户，可以从 `ALL_TABLES` 视图中查询本租户所有用户表的信息。
 
 用户租户只能在本租户下修改本租户的系统变量。
 
-* 对于 MySQL 兼容模式的租户，可以从 information_schema.global_variables 和 information_schema.session_variables 视图中查询系统变量信息。也可以通过 SHOW VARIABLES 语句查询。
-* 对于 Oracle 兼容模式的租户，可以通过 SHOW VARIABLES 语句来查询本租户所有的系统变量。
+* 对于 MySQL 兼容模式的租户，可以从 `information_schema.global_variables` 和 `information_schema.session_variables` 视图中查询系统变量信息。也可以通过 `SHOW VARIABLES` 语句查询。
+* 对于 Oracle 兼容模式的租户，可以通过 `SHOW VARIABLES` 语句来查询本租户所有的系统变量。
