--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/5.log-in-a-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/5.log-in-a-tenant.md
@@ -1,1 +1,119 @@
 # 登录租户
+
+创建租户后可以登录租户创建各种数据库对象（Database、Table、用户等）。
+
+## 设置白名单
+
+创建租户时可以指定租户的系统变量 `ob_tcp_invited_nodes` 用于指定租户连接的白名单，即允许哪些客户端 IP 连接该租户。如果不指定 `ob_tcp_invited_nodes` 的值，则默认租户的连接方式为只允许本机的 IP 连接数据库。
+
+租户创建完成后，可以登录 sys 租户的 root 用户，查看或者修改白名单。
+
+* 查看租户白名单
+
+    ```sql
+    SHOW VARIABLES LIKE 'ob_tcp_invited_nodes';
+    +----------------------+-------+
+    | Variable_name        | Value |
+    +----------------------+-------+
+    | ob_tcp_invited_nodes | %     |
+    +----------------------+-------+
+    ```
+
+* 更改租户白名单
+
+     ```sql
+    SET GLOBAL ob_tcp_invited_nodes='%';
+    SET GLOBAL ob_tcp_invited_nodes='10.10.10.%';
+    ```
+
+## 客户端登录示例
+
+下文以只能通过本机的 IP 连接数据库为例。
+
+1. 使用 root 用户登录到数据库的 sys 租户。
+
+    ```sql
+    $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
+    ```
+
+2. 进入 oceanbase 数据库。
+
+    ```sql
+    obclient [(none)]> USE oceanbase;
+    ```
+
+3. 查看所有租户的 TENANT_ID 信息。
+
+    ```sql
+    obclient [oceanbase]> SELECT TENANT_ID,TENANT_NAME FROM DBA_OB_TENANTS;
+    +-----------+-------------+
+    | TENANT_ID | TENANT_NAME |
+    +-----------+-------------+
+    |         1 | sys         |
+    |      1001 | META$1002   |
+    |      1002 | mysql001    |
+    |      1009 | META$1010   |
+    |      1010 | oracle001   |
+    |      1035 | META$1036   |
+    +-----------+-------------+
+    6 rows in set
+    ```
+
+4. 查询 oracle001 租户在哪些节点上有 unit。
+
+    ```sql
+    obclient [oceanbase]> SELECT UNIT_ID,STATUS,ZONE,SVR_IP FROM dba_ob_units WHERE TENANT_ID = 1010;
+    +---------+--------+-------+--------------+
+    | UNIT_ID | STATUS | ZONE  | SVR_IP       |
+    +---------+--------+-------+--------------+
+    |    1013 | ACTIVE | zone3 | 172.30.xx.xx |
+    |    1014 | ACTIVE | zone1 | 172.30.xx.xx |
+    |    1015 | ACTIVE | zone2 | 172.30.xx.xx |
+    +---------+--------+-------+--------------+
+    ```
+
+5. 通过 ssh 方式登录到任一节点。
+
+    ```bash
+    $ssh admin@172.30.xx.xx
+    admin@172.30.xx.xx's password:
+    ```
+
+6. 通过客户端登录 OceanBase 数据库。
+
+   示例：
+
+   * 通过 obclient 客户端登录 Oracle 兼容模式的租户。
+
+      <main id="notice" type='explain'>
+       <h4>说明</h4>
+       <p>obclient 是 OceanBase 数据库的登录客户端，可以支持连接 MySQL 兼容模式租户和 Oracle 兼容模式租户。</p>
+      </main>
+
+      ```bash
+      $obclient -P2881 -h127.0.0.1 -usys@oracle001 -p**** -A
+      Welcome to the OceanBase.  Commands end with ; or \g.
+      Your OceanBase connection id is 3222649039
+      Server version: OceanBase 4.0.0.0 (r101000022022120716-0d7927892ad6d830e28437af099f018b0ad9a322) (Built Dec  7 2022 16:22:15)
+
+      Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
+
+      Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
+
+      obclient [SYS]>
+      ```
+
+   * 通过 MySQL 客户端登录 MySQL 兼容模式的租户。
+
+      ```bash
+      $ mysql -P2881 -h127.0.0.1 -uroot@mysql001 -p**** -A 
+      Welcome to the MariaDB monitor.  Commands end with ; or \g.
+      Your MySQL connection id is 3222598219
+      Server version: 5.7.25 OceanBase 4.0.0.0 (r101000022022120716-0d7927892ad6d830e28437af099f018b0ad9a322) (Built Dec  7 2022 16:22:15)
+
+      Copyright (c) 2000, 2018, Oracle, MariaDB Corporation Ab and others.
+
+      Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
+
+      MySQL [none]>
+      ```
