--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
@@ -1,1 +1,127 @@
 # 查看租户系统变量
+
+本文介绍如何查看租户系统变量。
+
+## 通过 SHOW 语句查看租户系统变量
+
+1. 使用 root 用户登录到数据库的 `mq_t1` 租户。
+
+    ```sql
+    $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
+    ```
+
+2. 通过 SHOW 语句查询系统变量信息。
+
+   * 查询 'ob_query_timeout' 的 Session 级别变量，`SHOW SESSION VARIABLES` 语句可以缩写成 `SHOW VARIABLES`。
+
+      ```sql
+      obclient [oceanbase]> SHOW VARIABLES LIKE 'ob_query_timeout';
+      +------------------+-------------+
+      | Variable_name    | Value       |
+      +------------------+-------------+
+      | ob_query_timeout | 10000000    |
+      +------------------+-------------+
+      1 row in set
+      
+      # 或者
+
+      obclient [oceanbase]> SHOW SESSION VARIABLES LIKE 'ob_query_timeout';
+      +------------------+-------------+
+      | Variable_name    | Value       |
+      +------------------+-------------+
+      | ob_query_timeout | 10000000    |
+      +------------------+-------------+
+      1 row in set
+      ```
+
+   * 查询 'ob_query_timeout' 的 Global 级别变量
+
+      ```sql
+      obclient [oceanbase]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
+      +------------------+-------------+
+      | Variable_name    | Value       |
+      +------------------+-------------+
+      | ob_query_timeout | 10000000    |
+      +------------------+-------------+
+      1 row in set
+      ```
+
+## 通过视图查看租户系统变量
+
+* MySQL 模式
+
+  1. 使用 root 用户登录到数据库的 mysql001 租户（MySQL 模式）。
+
+      ```sql
+      $obclient -P2881 -h172.30.xx.xx -uroot@mysql001#cluster -p**** -A -Doceanbase
+      ```
+
+  2. 进入 OceanBase 数据库。
+
+      ```sql
+      obclient [(none)]> USE oceanbase;
+      ```
+
+  3. 通过视图查询变量值。
+
+     * 通过 `INFORMATION_SCHEMA.SESSION_VARIABLES` 视图查询 'ob_query_timeout' 的 Session 级别变量值。
+
+        ```sql
+        obclient [oceanbase]> SELECT * FROM INFORMATION_SCHEMA.SESSION_VARIABLES WHERE VARIABLE_NAME = 'ob_query_timeout';
+        +------------------+----------------+
+        | VARIABLE_NAME    | VARIABLE_VALUE |
+        +------------------+----------------+
+        | ob_query_timeout | 10000000       |
+        +------------------+----------------+
+        1 row in set
+        ```
+
+     * 通过 `INFORMATION_SCHEMA.GLOBAL_VARIABLES` 视图查询 `ob_query_timeout` 的 Global 级别变量值。
+
+        ```sql
+        obclient [oceanbase]> SELECT * FROM INFORMATION_SCHEMA.GLOBAL_VARIABLES WHERE VARIABLE_NAME = 'ob_query_timeout';
+        +------------------+----------------+
+        | VARIABLE_NAME    | VARIABLE_VALUE |
+        +------------------+----------------+
+        | ob_query_timeout | 10000000       |
+        +------------------+----------------+
+        1 row in set
+        ```
+
+* Oracle 模式
+
+  1. 使用 sys 用户登录到数据库的 oracle001 租户（oracle 模式）。
+
+      ```sql
+      $obclient -h172.30.xx.xx -P2883 -usys@oracle001#cluster -p**** -A
+      ```
+
+  2. 通过视图查询变量值。
+
+     * 通过 `SYS.TENANT_VIRTUAL_SESSION_VARIABLE` 视图查询 `ob_query_timeout` 的 Session 级别变量值。
+
+        ```sql
+        obclient [SYS]> SELECT * FROM SYS.TENANT_VIRTUAL_SESSION_VARIABLE WHERE VARIABLE_NAME = 'ob_query_timeout';
+        +------------------+----------+
+        | VARIABLE_NAME    | VALUE    |
+        +------------------+----------+
+        | ob_query_timeout | 10000000 |
+        +------------------+----------+
+        1 row in set
+        ```
+
+     * 通过 `SYS.TENANT_VIRTUAL_GLOBAL_VARIABLE` 视图查询 'ob_query_timeout' 的 Global 级别的变量值。
+
+        ```sql
+        obclient [SYS]> SELECT * FROM SYS.TENANT_VIRTUAL_GLOBAL_VARIABLE WHERE VARIABLE_NAME = 'ob_query_timeout';
+        +------------------+----------+
+        | VARIABLE_NAME    | VALUE    |
+        +------------------+----------+
+        | ob_query_timeout | 10000000 |
+        +------------------+----------+
+        1 row in set
+        ```
+
+## 更多信息
+
+变量详细的了解和使用，请参见 [系统变量概述](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/1.overview-of-system-variables-of-mysql-mode.md)
