--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -1,1 +1,118 @@
 # 修改系统租户变量
+
+本文介绍如何修改租户系统变量。
+
+系统租户变量可以通过 `SET` 语句修改。
+
+* 设置 Session 级别的变量仅对当前 Session 有效，对其他 Session 无效。
+* 设置 Global 级别的变量对当前 Session 无效，需要重新登录后，建立新的 Session 才会生效。
+
+  <main id="notice" type='notice'>
+   <h4>注意</h4>
+   <p>设置 Global 级别变量要求当前用户拥有 SUPER 权限或 ALTER SYSTEM 权限。</p>
+  </main>
+
+## 操作步骤
+
+1. 登录数据库
+
+    ```sql
+    $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
+    ```
+
+2. 查询系统租户 Session/Global 变量
+
+    ```sql
+    obclient [(none)]> SHOW VARIABLES LIKE 'ob_query_timeout';
+    +------------------+----------+
+    | Variable_name    | Value    |
+    +------------------+----------+
+    | ob_query_timeout | 10000000 |
+    +------------------+----------+
+    1 row in set
+
+    obclient [(none)]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
+    +------------------+----------+
+    | Variable_name    | Value    |
+    +------------------+----------+
+    | ob_query_timeout | 10000000 |
+    +------------------+----------+
+    1 row in set
+    ```
+
+3. 通过 `SET` 修改 Session 级别变量值
+
+    ```sql
+    obclient [oceanbase]> SET ob_query_timeout = 20000000;
+    Query OK, 0 rows affected
+
+    obclient [(none)]> SHOW VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
+    +------------------+----------+
+    | Variable_name    | Value    |
+    +------------------+----------+
+    | ob_query_timeout | 20000000 |
+    +------------------+----------+
+    1 row in set
+    ```
+
+4. 查看修改结果
+
+    ```sql
+    obclient [(none)]> SHOW VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
+    +------------------+----------+
+    | Variable_name    | Value    |
+    +------------------+----------+
+    | ob_query_timeout | 20000000 |
+    +------------------+----------+
+    1 row in set
+
+    obclient [(none)]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
+    +------------------+----------+
+    | Variable_name    | Value    |
+    +------------------+----------+
+    | ob_query_timeout | 10000000 |
+    +------------------+----------+
+    1 row in set
+    ```
+
+5. 通过 `SET` 修改 Global 级别变量值
+
+    ```sql
+    obclient [oceanbase]> SET GLOBAL ob_query_timeout = 20000000;
+    Query OK, 0 rows affected
+    ```
+
+6. 查看修改结果
+
+    ```sql
+    obclient [(none)]> SHOW VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
+    +------------------+----------+
+    | Variable_name    | Value    |
+    +------------------+----------+
+    | ob_query_timeout | 20000000 |
+    +------------------+----------+
+    1 row in set
+
+    obclient [(none)]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
+    +------------------+----------+
+    | Variable_name    | Value    |
+    +------------------+----------+
+    | ob_query_timeout | 20000000 |
+    +------------------+----------+
+    1 row in set
+    ```
+
+## INT 类型变量修改
+
+在 `SHOW VARIABLES` 命令中显示 ON/OFF 或者 True/False 的变量，可以通过如下任意方法设置变量值：
+
+```sql
+SET @@foreign_key_checks = ON;
+
+SET @@foreign_key_checks = 1;
+```
+
+<main id="notice" type='explain'>
+ <h4>说明</h4>
+ <p>以上两种方式的 Session 级别变量的设置是等效的。</p>
+</main>
