--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
@@ -53,6 +53,6 @@
 5. 查看 `DBA_OB_RESOURCE_POOLS` 视图，确认删除成功。
 
     ```sql
-    obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS where NAME = 'mq_pool_02';
+    obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_02';
     Empty set
     ```
