--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.modify-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.modify-resource-specifications.md
@@ -23,7 +23,7 @@
 3. 通过 `DBA_OB_UNIT_CONFIGS` 视图，获取资源规格 `S1_unit_config` 的配置信息。
 
     ```sql
-    obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS where NAME = 'S1_unit_config';
+    obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS WHERE NAME = 'S1_unit_config';
     +----------------+----------------+----------------------------+----------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_CONFIG_ID | NAME           | CREATE_TIME                | MODIFY_TIME                | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
     +----------------+----------------+----------------------------+----------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
@@ -49,7 +49,7 @@
     obclient [oceanbase]> ALTER RESOURCE UNIT S1_unit_config MAX_CPU 2, MEMORY_SIZE '4G';
     Query OK, 0 rows affected (0.003 sec)
 
-    obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS where NAME = 'S1_unit_config';
+    obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS WHERE NAME = 'S1_unit_config';
     +----------------+----------------+----------------------------+----------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_CONFIG_ID | NAME           | CREATE_TIME                | MODIFY_TIME                | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
     +----------------+----------------+----------------------------+----------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
