--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
@@ -1,6 +1,6 @@
 # 修改资源池属性
 
-修改资源池属性，即是调整资源池配置中的 unit、unit_num、ZONE_LIST 等参数信息。本文介绍如何修改资源池属性。
+修改资源池属性，即是调整资源池配置的 unit、UNIT_NUM、ZONE_LIST 等参数信息。本文介绍如何修改资源池属性。
 
 资源池属性可以通过 `ALTER RESOURCE POOL` 语句进行修改。
 
@@ -23,7 +23,7 @@
 3. 通过 `DBA_OB_RESOURCE_POOLS` 视图，获取资源池 `mq_pool_02` 的配置信息。
 
     ```sql
-    obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS where name = 'mq_pool_02';
+    obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_02';
     +------------------+------------+-----------+----------------------------+----------------------------+------------+----------------+-------------+--------------+
     | RESOURCE_POOL_ID | NAME       | TENANT_ID | CREATE_TIME                | MODIFY_TIME                | UNIT_COUNT | UNIT_CONFIG_ID | ZONE_LIST   | REPLICA_TYPE |
     +------------------+------------+-----------+----------------------------+----------------------------+------------+----------------+-------------+--------------+
@@ -47,7 +47,7 @@
     obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 unit='S2_unit_config';
     Query OK, 0 rows affected
 
-    obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 unit_num=2;
+    obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 UNIT_NUM=2;
     Query OK, 0 rows affected
 
     obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 ZONE_LIST=('zone1','zone2','zone3');
@@ -57,7 +57,7 @@
     参数说明：
 
     * unit：资源规格名称。
-    * unit_num：资源单元个数。
+    * UNIT_NUM：资源单元个数。
     * zone_list：zone 列表。
 
     `ALTER RESOURCE POOL` 语句的详细说明，请参见 [ALTER RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)。
