--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/10.modify-tenant-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/10.modify-tenant-properties.md
@@ -21,7 +21,7 @@
 3. 通过 `DBA_OB_TENANTS` 视图，查看租户 'mq_t1' 的配置信息。
 
     ```sql
-    obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS where tenant_name = 'mq_t1';
+    obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
     +-----------+-------------+-------------+----------------------------+----------------------------+--------------+------------------------------+-------------------+--------------------+--------+---------------+--------+
     | TENANT_ID | TENANT_NAME | TENANT_TYPE | CREATE_TIME                | MODIFY_TIME                | PRIMARY_ZONE | LOCALITY                     | PREVIOUS_LOCALITY | COMPATIBILITY_MODE | STATUS | IN_RECYCLEBIN | LOCKED |
     +-----------+-------------+-------------+----------------------------+----------------------------+--------------+------------------------------+-------------------+--------------------+--------+---------------+--------+
@@ -42,7 +42,7 @@
     obclient [oceanbase]> ALTER TENANT mq_t1 locality="F@zone1,F@zone2,F@zone3";
     Query OK, 0 rows affected
 
-    obclient [oceanbase]> ALTER TENANT mq_t1 resource_pool_list=('mq_pool_02');
+    obclient [oceanbase]> ALTER TENANT mq_t1 RESOURCE_POOL_LIST=('mq_pool_02');
     ERROR 1210 (HY000): Incorrect arguments to resource pool list
     ```
 
