--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/11.tenant-locking-and-unlocking.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/11.tenant-locking-and-unlocking.md
@@ -32,7 +32,7 @@
     1 row in set
     ```
 
-    `DBA_OB_TENANTS` 视图的详细说明，请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)
+    `DBA_OB_TENANTS` 视图的详细说明，请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
 4. 通过 `ALTER TENANT` 语句，锁定 `mq_t1` 租户。
 
