--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/10.modify-tenant-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/10.modify-tenant-properties.md
@@ -18,7 +18,7 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_TENANTS` 视图，查看租户 'mq_t1' 的配置信息。
+3. 通过 `DBA_OB_TENANTS` 视图，查看租户 `mq_t1` 的配置信息。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
@@ -36,7 +36,7 @@
    `RESOURCE_POOL_LIST` 表示资源池列表，每次仅支持添加或删除一个资源池。不支持直接替换租户的资源池。租户原来使用的资源池为 `mq_pool_01`，通过以下命令直接将租户的资源池替换为 `mq_pool_02` 时，系统会报错。
 
     ```sql
-    obclient [oceanbase]> ALTER TENANT mq_t1 primary_zone='zone1,zone2';
+    obclient [oceanbase]> ALTER TENANT mq_t1 PRIMARY_ZONE='zone1,zone2';
     Query OK, 0 rows affected
 
     obclient [oceanbase]> ALTER TENANT mq_t1 locality="F@zone1,F@zone2,F@zone3";
@@ -48,7 +48,7 @@
 
     参数说明：
 
-    * PRIMARY_ZONE ：用于指定租户的 Primary Zone，。
+    * PRIMARY_ZONE：用于指定租户的 Primary Zone。
     * locality：描述副本在 Zone 间的分布情况，如：`F@zone1,F@zone2,F@zone3` 表示 `zone1`、`zone2` 和 `zone3` 为全功能副本。该参数增加 zone 配置时需要租户资源池的 ZONE_LIST 包含该 zone。
 
     `ALTER TENANT` 语句的详细说明，请参见 [ALTER TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/5.alter-tenant.md)。
