修改 9.use-chunjun-to-migrate-data-from-mysql-database-to-oceanbase-database.md

--- a/zh-CN/5.data-migration/2.migrate-data-from-a-mysql-database-to-an-oceanbase-database/9.use-chunjun-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/zh-CN/5.data-migration/2.migrate-data-from-a-mysql-database-to-an-oceanbase-database/9.use-chunjun-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -1,8 +1,8 @@
 # 使用 ChunJun 从 MySQL 数据库迁移数据到 OceanBase 数据库
 
-纯钧（ChunJun，原名 FlinkX）是一款稳定、易用、高效、批流一体的数据集成框架，目前基于实时计算引擎 Flink 实现多种异构数据源之间的数据同步与计算。
+纯钧（ChunJun，原名 FlinkX）是一款稳定、易用、高效、批流一体的数据集成框架，基于实时计算引擎 Flink，支持 JSON 模版配置任务，兼容 Flink SQL 语法、支持分布式运行，支持 flink-standalone、yarn-session、yarn-per job 等多种提交方式和支持全量同步、增量同步等特点。
 
-以下将介绍使用 ChunJun 的 Local 模式从 MySQL 数据库迁移数据到 OceanBase 数据库 MySQL 模式。
+以下将介绍使用 ChunJun 的 Local 模式从 MySQL 数据库迁移数据到 OceanBase 数据库（MySQL 模式）。
 
 ## 场景描述
 
@@ -140,7 +140,7 @@ $vi test_mysql_to_ob.json
 [root@xxx /]
 $cd /ChunJun_Home/chunjun-dist
 
-[admin@k08j13249.eu95sqa /home/admin/lukun_test/chunjun/chunjun-dist]
+[admin@xxx /home/admin/lukun_test/chunjun/chunjun-dist]
 $sh bin/chunjun-local.sh -job chunjun-examples/json/test_data/test_mysql_to_ob.json
 
           #                               #
@@ -188,7 +188,7 @@ nErrors                   |  0
 登录到 OceanBase 数据库查看数据是否迁移成功。
 
 ```sql
-[admin@k08j13249.eu95sqa /home/admin]
+[admin@xxx /home/admin]
 $obclient -h10.10.10.2 -P2881 -uroot@mysql001 -p -A
 Enter password:
 Welcome to the OceanBase.  Commands end with ; or \g.
@@ -214,5 +214,7 @@ obclient [test_data]> SELECT * FROM test_tbl1;
 
 ## 相关文档
 
+* 更多 ChunJun 特点的信息介绍，请参见 [Features of ChunJun](https://github.com/DTStack/chunjun#features-of-chunjun)。
 * ChunJun 快速入门的详细信息，请参见 [快速开始](https://dtstack.github.io/chunjun/documents/%E5%BF%AB%E9%80%9F%E5%BC%80%E5%A7%8B)。
 * MySQL 数据库作为源库配置 json 文件的详细信息，请参见 [Mysql Source](https://dtstack.github.io/chunjun/documents/ChunJun%E8%BF%9E%E6%8E%A5%E5%99%A8@mysql@mysql-source)。
+* 更多脚本示例，请参见项目内 `/chunjun-dist/chunjun-examples` 文件夹下的文件。
