修改 7.use-chunjun-to-migrate-data-from-oceanbase-database-to-mysql-database.md

--- a/zh-CN/5.data-migration/3.migrate-data-from-apsaradb-for-oceanbase-to-mysql/7.use-chunjun-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/zh-CN/5.data-migration/3.migrate-data-from-apsaradb-for-oceanbase-to-mysql/7.use-chunjun-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -1,10 +1,8 @@
 # 使用 ChunJun 从 OceanBase 数据库迁移数据到 MySQL 数据库
 
-纯钧（ChunJun，原名 FlinkX）是一款稳定、易用、高效、批流一体的数据集成框架，目前基于实时计算引擎 Flink 实现多种异构数据源之间的数据同步与计算。
+纯钧（ChunJun，原名 FlinkX）是一款稳定、易用、高效、批流一体的数据集成框架，目前基于实时计算引擎 Flink 实现多种异构数据源之间的数据同步与计算。OceanBase CDC 组件 libobcdc 和 oblogproxy 提供了拉取 OceanBase 增量 commit log 的能力。chunjun-connector-oceanbasecdc 在内部集成了 oblogclient 来连接 oblogproxy，获取相关的日志数据，可以进行 OceanBase 数据库的增量数据迁移。
 
-OceanBase CDC 组件 libobcdc 和 oblogproxy 提供了拉取 OceanBase 增量 commit log 的能力。chunjun-connector-oceanbasecdc 在内部集成了 oblogclient 来连接 oblogproxy，获取相关的日志数据。
-
-以下将介绍使用 ChunJun 的 Local 模式从 OceanBase 数据库 MySQL 模式迁移数据到 MySQL 数据库。
+以下将介绍使用 ChunJun 的 Local 模式从 OceanBase 数据库（MySQL 模式）迁移数据到 MySQL 数据库。
 
 ## 场景描述
 
@@ -143,7 +141,7 @@ $vi test_ob_to_mysql.json
 [root@xxx /]
 $cd /ChunJun_Home/chunjun-dist
 
-[admin@k08j13249.eu95sqa /home/admin/lukun_test/chunjun/chunjun-dist]
+[admin@xxx /ChunJun_Home/chunjun-dist]
 $sh bin/chunjun-local.sh -job chunjun-examples/json/test_data/test_ob_to_mysql.json
 
           #                               #
@@ -160,7 +158,7 @@ $sh bin/chunjun-local.sh -job chunjun-examples/json/test_data/test_ob_to_mysql.j
 Reference site: https://dtstack.github.io/chunjun
 
 chunjun is starting ...
-CHUNJUN_HOME is auto set /home/admin/lukun_test/chunjun/chunjun-dist/chunjun-dist
+CHUNJUN_HOME is auto set /ChunJun_Home/chunjun-dist/
 FLINK_HOME is empty!
 HADOOP_HOME is empty!
 ...
@@ -186,9 +184,32 @@ nErrors                   |  0
 2023-01-06 20:34:47,448 - 50317 INFO  [main] com.dtstack.chunjun.Main:program Flink_Job execution success
 ```
 
-### 步骤四：查看数据迁移情况
+### 步骤四：对 OceanBase 数据库数据增量修改
 
-登录到 MySQL 数据库查看数据是否迁移成功。
+登录到 OceanBase 数据库（MySQL 模式），并在表 `test_tbl1` 中插入一条数据。
+
+```sql
+[admin@xxx /home/admin]
+$obclient -h10.10.10.2 -P2881 -uroot@mysql001 -p -Dtest_data
+Enter password:
+Reading table information for completion of table and column names
+You can turn off this feature to get a quicker startup with -A
+
+Welcome to the OceanBase.  Commands end with ; or \g.
+Your OceanBase connection id is 3221709678
+Server version: OceanBase 4.0.0.0 (r101000022022120716-0d7927892ad6d830e28437af099f018b0ad9a322) (Built Dec  7 2022 16:22:15)
+
+Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
+
+Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
+
+obclient [test_data]> INSERT INTO test_tbl1 VALUES(4,'Macao',853);
+Query OK, 1 row affected
+```
+
+### 步骤五：查看数据迁移情况
+
+登录到 MySQL 数据库查看数据迁移情况。
 
 ```sql
 [admin@xxx /home/admin]
@@ -214,8 +235,9 @@ MySQL [test_ob_to_mysql]> SELECT * FROM tbl1;
 |    1 | China     |   86 |
 |    2 | Taiwan    |  886 |
 |    3 | Hong Kong |  852 |
+|    4 | Macao     |  853 |
 +------+-----------+------+
-3 rows in set
+4 rows in set
 ```
 
 ## 相关文档
@@ -223,3 +245,4 @@ MySQL [test_ob_to_mysql]> SELECT * FROM tbl1;
 * ChunJun 快速入门的详细信息，请参见 [快速开始](https://dtstack.github.io/chunjun/documents/%E5%BF%AB%E9%80%9F%E5%BC%80%E5%A7%8B)。
 * OceanBase 数据库作为源库配置 json 文件的详细信息，请参见 [OceanBase CDC Source](https://github.com/DTStack/chunjun/blob/master/docs_zh/ChunJun%E8%BF%9E%E6%8E%A5%E5%99%A8/oceanbasecdc/OceanBaseCDC-source.md)。
 * MySQL 数据库作为目标库配置 json 文件的详细信息，请参见 [Mysql Sink](https://dtstack.github.io/chunjun/documents/ChunJun%E8%BF%9E%E6%8E%A5%E5%99%A8@mysql@mysql-sink)。
+* 更多脚本示例，请参见项目内 `/chunjun-dist/chunjun-examples` 文件夹下的文件。
