--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
@@ -6,6 +6,12 @@
 
 删除租户后，租户下的数据库和表也同时被删除。但是租户使用的资源配置不会被删除。资源配置可以继续给其他租户使用。
 
+* 当系统租户开启回收站功能时，`DROP TENANT` 操作表示删除的租户会进入回收站。对于回收站中的租户，后续系统租户可以通过租户级回收站功能进一步删除或恢复该租户，租户级回收站相关操作请参见 租户回收站。
+
+* 当系统租户关闭回收站功能时，`DROP TENANT` 操作表示延迟删除租户，后台线程会进行 GC（Garbage Collection）动作，租户的信息仍然可以通过内部表查询。租户具体延迟删除的时间由配置项 `schema_history_expire_time` 控制，默认为 7 天，表示执行 `DROP TENANT` 7 天后，租户会被删除，租户下的数据库和表也同时被删除。
+
+  `schema_history_expire_time` 配置项更多信息请参见 [schema_history_expire_time](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/180.schema_history_expire_time.md)。
+
 ## 操作步骤
 
 1. 使用 root 用户登录到数据库的 sys 租户。
