--- a/zh-CN/6.manage/4.disaster-recovery-management/2.multi-replica-disaster-recovery/4.disaster-tolerance-architecture-and-level.md
+++ b/zh-CN/6.manage/4.disaster-recovery-management/2.multi-replica-disaster-recovery/4.disaster-tolerance-architecture-and-level.md
@@ -36,7 +36,7 @@ OceanBase 数据库内部的心跳机制能够自动处理节点异常，OBProxy
 
 * 故障 OBServer 损坏，无法重新启动
   
-  在确认 OBServer 损坏无法重新启动后，需要走机器替换流程，即下线故障节点，并重新上线新机器。替换流程可参考集群管理的删除节点部分。
+  在确认 OBServer 损坏无法重新启动后，需要走机器替换流程，即下线故障节点，并重新上线新机器。有关替换机器的详细操作请参见 [替换节点](链接暂时无法添加)。
 
 ## 机房容灾
 
