--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -16,7 +16,7 @@
 
 对于 `STOP SERVER` 命令，假设被执行 `STOP SERVER` 命令的节点为 A，`STOP SERVER` 命令的内部执行逻辑如下：
 
-1. 检查是否有跨 Zone 的节点被 Stop。如果存在，则不允许对 A 执行 Stop Server 操作。
+1. 由于不允许同时有多个 Zone 的节点被 Stop，故首先检查是否有其他 Zone 的节点被 Stop。如果存在，则不允许对 A 执行 Stop Server 操作。
 
 2. 以日志流为单位，检查是否存在无主的日志流。如果存在，则不允许对 A 执行 Stop Server 操作。
 
