--- a/zh-CN/6.manage/2.tenant-management/1.tenant-introduction.md
+++ b/zh-CN/6.manage/2.tenant-management/1.tenant-introduction.md
@@ -6,8 +6,8 @@
 
 要理解清楚租户的概念，首先需要了解资源规格、资源池、资源单元等前置概念。
 
-每个资源池由若干个资源单元（称为 Unit）组成，Unit 是资源调度的基本单位，每个 Unit 占据节点上一定的物理资源。通过调整 Unit 在同一个 Zone 内不同节点的分布（称为副本迁移），从而达到 Zone 内不同节点间的负载均衡。节点故障时，可以通过将节点上的 Unit 迁移到同 Zone 内其他节点上，从而达到自动容灾恢复的目的。通过调整 Unit 在不同 Zone 的分布（变更租户的 Locality 属性），从而调整租户的部署模式，例如 “同城三中心”、“两地三中心”、“三地五中心” 等，从而具备不同的容灾等级。
+每个资源池由若干个资源单元（称为 unit）组成，unit 是资源调度的基本单位，每个 unit 占据节点上一定的物理资源。通过调整 unit 在同一个 Zone 内不同节点的分布（称为副本迁移），从而达到 Zone 内不同节点间的负载均衡。节点故障时，可以通过将节点上的 unit 迁移到同 Zone 内其他节点上，从而达到自动容灾恢复的目的。通过调整 unit 在不同 Zone 的分布（变更租户的 Locality 属性），从而调整租户的部署模式，例如 “同城三中心”、“两地三中心”、“三地五中心” 等，从而具备不同的容灾等级。
 
-每个 Unit 都归属于一个资源池，每个资源池若干个 Unit 组成，资源池是资源分配的基本单位，同一个资源池内的各个 Unit 具有相同的资源规格，资源规格描述了该资源池内 Unit 的CPU、内存、IOPS、日志盘空间等物理资源大小。
+每个 unit 都归属于一个资源池，每个资源池若干个 unit 组成，资源池是资源分配的基本单位，同一个资源池内的各个 unit 具有相同的资源规格，资源规格描述了该资源池内 unit 的CPU、内存、IOPS、日志盘空间等物理资源大小。
 
-通过 Unit 的概念，我们将 OceanBase 数据库的物理概念和逻辑概念进行了关联。每个租户有若干 Unit ，分布于若干 Zone 的若干节点上。而每个节点上分布有若干个 Unit ，这些 Unit 归属于不同租户。概括的讲：集群由节点组成，节点是 Unit 的容器。租户由 Unit 组成，Unit 是数据库对象的容器。
+通过 unit 的概念，我们将 OceanBase 数据库的物理概念和逻辑概念进行了关联。每个租户有若干 unit ，分布于若干 Zone 的若干节点上。而每个节点上分布有若干个 unit ，这些 unit 归属于不同租户。概括的讲：集群由节点组成，节点是 unit 的容器。租户由 unit 组成，unit 是数据库对象的容器。
