--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
@@ -12,7 +12,7 @@
 
 2. 通过 SHOW 语句查询系统变量信息。
 
-   * 查询 'ob_query_timeout' 的 Session 级别变量，`SHOW SESSION VARIABLES` 语句可以缩写成 `SHOW VARIABLES`。
+   * 查询 `ob_query_timeout` 的 Session 级别变量，`SHOW SESSION VARIABLES` 语句可以缩写成 `SHOW VARIABLES`。
 
       ```sql
       obclient [oceanbase]> SHOW VARIABLES LIKE 'ob_query_timeout';
@@ -34,7 +34,7 @@
       1 row in set
       ```
 
-   * 查询 'ob_query_timeout' 的 Global 级别变量
+   * 查询 `ob_query_timeout` 的 Global 级别变量
 
       ```sql
       obclient [oceanbase]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
@@ -124,4 +124,8 @@
 
 ## 更多信息
 
-变量详细的了解和使用，请参见 [系统变量概述](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/1.overview-of-system-variables-of-mysql-mode.md)
+变量详细的了解和使用，请参见：
+
+* [系统变量概述](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/1.overview-of-system-variables-of-mysql-mode.md)
+* [ob_query_timeout（MySQL 模式）](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/90.ob_query_timeout-of-mysql-mode.md)
+* [ob_query_timeout（Oracle 模式）](../../../7.reference/5.system-reference/3.system-variable-of-oracle-mode/89.ob_query_timeout-of-oracle-mode.md)
