--- a/zh-CN/6.manage/2.tenant-management/3.introduction-of-user-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/3.introduction-of-user-tenant.md
@@ -4,7 +4,7 @@
 用户租户具备一个实例所应该具有的所有特性，主要包括：
 
 * 可以创建自己的用户
-* 可以创建数据库（database）、表（table）等所有客体对象
+* 可以创建数据库（database，仅 MySQL 兼容模式支持）、表（table）等所有客体对象
 * 有自己独立的系统表和系统视图
 * 有自己独立的系统变量
 * 数据库实例所具备的其他特性
@@ -15,8 +15,8 @@
 
 在用户租户下创建的用户，只能登录到本租户，对其他租户不可见。
 
-* 对于 MySQL 兼容模式的租户，可以从 `mysql.user` 视图中查询用户信息。
-* 对于 Oracle 兼容模式的租户，可以从 `ALL_USERS` 视图中查询用户信息。
+* 对于 MySQL 兼容模式的租户，可以从视图 `mysql.user` 中查询用户信息。
+* 对于 Oracle 兼容模式的租户，可以从系统视图 `ALL_USERS` 中查询用户信息。
 
 在用户租户下可以创建表，创建后对其他租户不可见。
 
