--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/10.modify-tenant-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/10.modify-tenant-properties.md
@@ -30,10 +30,9 @@
     1 row in set
     ```
 
-    `DBA_OB_TENANTS` 视图的详细说明，请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 
+    `DBA_OB_TENANTS` 视图的详细说明，请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
 4. 修改租户的 Primary Zone 为 `"zone1,zone2"`，Locality 为 `"F@sa128_obv4_1,F@sa128_obv4_2,F@sa128_obv4_3"`。
-   `RESOURCE_POOL_LIST` 表示资源池列表，每次仅支持添加或删除一个资源池。不支持直接替换租户的资源池。租户原来使用的资源池为 `mq_pool_01`，通过以下命令直接将租户的资源池替换为 `mq_pool_02` 时，系统会报错。
 
     ```sql
     obclient [oceanbase]> ALTER TENANT mq_t1 PRIMARY_ZONE='zone1,zone2';
@@ -41,7 +40,11 @@
 
     obclient [oceanbase]> ALTER TENANT mq_t1 locality="F@zone1,F@zone2,F@zone3";
     Query OK, 0 rows affected
+    ```
 
+    `RESOURCE_POOL_LIST` 表示资源池列表，每次仅支持添加或删除一个资源池。不支持直接替换租户的资源池。租户原来使用的资源池为 `mq_pool_01`，通过以下命令直接将租户的资源池替换为 `mq_pool_02` 时，系统会报错。
+
+    ```sql
     obclient [oceanbase]> ALTER TENANT mq_t1 RESOURCE_POOL_LIST=('mq_pool_02');
     ERROR 1210 (HY000): Incorrect arguments to resource pool list
     ```
