--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -20,25 +20,31 @@
     $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
     ```
 
-2. 查询系统租户 Session/Global 变量
+2. 查询系统租户变量
 
-    ```sql
-    obclient [(none)]> SHOW VARIABLES LIKE 'ob_query_timeout';
-    +------------------+----------+
-    | Variable_name    | Value    |
-    +------------------+----------+
-    | ob_query_timeout | 10000000 |
-    +------------------+----------+
-    1 row in set
+   * 查询系统租户 Session 变量
 
-    obclient [(none)]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
-    +------------------+----------+
-    | Variable_name    | Value    |
-    +------------------+----------+
-    | ob_query_timeout | 10000000 |
-    +------------------+----------+
-    1 row in set
-    ```
+      ```sql
+      obclient [(none)]> SHOW VARIABLES LIKE 'ob_query_timeout';
+      +------------------+----------+
+      | Variable_name    | Value    |
+      +------------------+----------+
+      | ob_query_timeout | 10000000 |
+      +------------------+----------+
+      1 row in set
+      ```
+
+   * 查询系统租户 Global 变量
+  
+      ```sql
+      obclient [(none)]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE  'ob_query_timeout';
+      +------------------+----------+
+      | Variable_name    | Value    |
+      +------------------+----------+
+      | ob_query_timeout | 10000000 |
+      +------------------+----------+
+      1 row in set
+      ```
 
 3. 通过 `SET` 修改 Session 级别变量值
 
