--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
@@ -1,10 +1,15 @@
 # 修改资源池属性
 
-修改资源池属性，即是调整资源池配置的 unit、UNIT_NUM、ZONE_LIST 等参数信息。本文介绍如何修改资源池属性。
+修改资源池属性，即是调整资源池配置的 UNIT、UNIT_NUM、ZONE_LIST 等参数信息。本文介绍如何修改资源池属性。
 
 资源池属性可以通过 `ALTER RESOURCE POOL` 语句进行修改。
 
-修改资源池属性是实现租户扩容或缩容的另一种方式。例如，修改 `UNIT_NUM` 可以增加或减少每个 Zone 中节点数量达到扩容或缩容的目的。
+修改租户资源池属性是实现租户扩容或缩容的另一种方式。例如，调大 `UNIT_NUM` 可以增加每个 Zone 中节点数量达到扩容的目的。
+
+<main id="notice" type='explain'>
+ <h4>说明</h4>
+ <p><ul><li>当前版本暂不支持对租户资源池进行调小操作。</li></ul></p>
+</main>
 
 ## 操作步骤
 
@@ -38,33 +43,52 @@
 
     <main id="notice" type='notice'>
      <h4>注意</h4>
-     <p><ul><li>单条语句只能修改一个属性，如果需要同时修改 UNIT，UNIT_NUM，ZONE_LIST 中两条及以上的属性，需要分多条语句执行。</li><li> 如果该资源池已经被租户使用，只允许修改 UNIT 和 ZONE_LIST，修改 UNIT_NUM 将会报错。并且 UNIT_NUM 的最大值为单个 zone 内的 OBServer 服务数量，修改结果超过相应上线也会报错。</li><li> 修改 ZONE_LIST 时，每次仅支持添加或删除一个 Zone。</li></ul></p>
+     <p><ul><li>单条语句只能修改一个属性，如果需要同时修改 UNIT，UNIT_NUM，ZONE_LIST 中两条及以上的属性，需要分多条语句执行。</li><li> 如果该资源池已经被租户使用，只允许修改 UNIT 和 ZONE_LIST，修改 UNIT_NUM 将会报错。</li><li> 修改 ZONE_LIST 时，每次仅支持添加或删除一个 Zone。</li></ul></p>
     </main>
 
-    修改资源池 `mq_pool_02` 的资源规格为 `'S2_unit_config'`，资源单元个数为 2，zone_list 为 `'zone1','zone2','zone3'`。
+    * 资源池未被分配给租户
 
-    ```sql
-    obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 unit='S2_unit_config';
-    Query OK, 0 rows affected
+      修改资源池 `mq_pool_02` 的资源规格为 `'S2_unit_config'`，资源单元个数为 2，ZONE_LIST 为 `'zone1','zone2','zone3'`。
 
-    obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 UNIT_NUM=2;
-    Query OK, 0 rows affected
+        ```sql
+        obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 UNIT='S2_unit_config';
+        Query OK, 0 rows affected
 
-    obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 ZONE_LIST=('zone1','zone2','zone3');
-    Query OK, 0 rows affected
-    ```
+        obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 UNIT_NUM=2;
+        Query OK, 0 rows affected
+
+        obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 ZONE_LIST=('zone1','zone2','zone3');
+        Query OK, 0 rows affected
+        ```
+
+    * 资源池已被分配给租户
+
+      租户资源池修改配置时，UNIT_NUM 需要通过 `ALTER RESOURCE TENANT` 语句进行修改。
+
+      修改资源池 `mq_pool_02` 的资源规格为 `'S2_unit_config'`，资源单元个数为 2，ZONE_LIST 为 `'zone1','zone2','zone3'`。
+
+         ```sql
+        obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 UNIT='S2_unit_config';
+        Query OK, 0 rows affected
+
+        obclient [oceanbase]> ALTER RESOURCE TENANT mq_t2 UNIT_NUM=2;
+        Query OK, 0 rows affected
+
+        obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 ZONE_LIST=('zone1','zone2','zone3');
+        Query OK, 0 rows affected
+        ```
 
     参数说明：
 
-    * unit：资源规格名称。
-    * UNIT_NUM：资源单元个数。
-    * zone_list：zone 列表。
+    * UNIT：资源规格名称。
+    * UNIT_NUM：资源单元个数。增加 UNIT 数量时，UNIT_NUM 的值不能大于每个 Zone 内 OBServer 的个数。
+    * ZONE_LIST：zone 列表。
 
     `ALTER RESOURCE POOL` 语句的详细说明，请参见 [ALTER RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)。
 
 5. 查看 `DBA_OB_RESOURCE_POOLS` 视图，确认修改结果。
 
-    结果如下，可以看到 UNIT_COUNT、UNIT_CONFIG_ID、ZONE_LIST 参数已经更新。
+    结果如下，可以看到 `UNIT_COUNT`、`UNIT_CONFIG_ID`、`ZONE_LIST` 参数已经更新。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_02';
