新增替换节点的内容

--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
@@ -122,7 +122,7 @@
    3 rows in set
    ```
   
-  有关 `GV$OB_PARAMETERS` 视图的更多信息，请参见 [GV$OB_PARAMETERS](少视图)。
+  有关 `GV$OB_PARAMETERS` 视图的更多信息，请参见 [GV$OB_PARAMETERS](暂时无法加链接)。
 
 ## 相关文档
 
