--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -61,16 +61,16 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
       语句如下：
 
       ```sql
-      obclient [none]> ALTER SYSTEM MIGRATE UNIT = unit_id DESTINATION = 'ip:port'; 
+      obclient [none]> ALTER SYSTEM MIGRATE UNIT = unit_id DESTINATION = 'svr_ip:svr_port'; 
       ```
 
        相关参数说明如下：
 
        * `unit_id`：表示待迁移的 Unit 的 ID。
 
-       * `ip`：指定 Unit 迁移后的节点所在的主机 IP。
+       * `svr_ip`：指定 Unit 迁移后的节点所在的主机 IP。
 
-       * `port`：指定 Unit 迁移后的节点的 RPC 端口。
+       * `svr_port`：指定 Unit 迁移后的节点的 RPC 端口。
 
       将 ID 为 `1012` 的 Unit 迁移到同 Zone 的 `xx.xx.xx.218` 服务器上的示例如下：
 
@@ -83,14 +83,14 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
    语句如下：
 
    ```sql
-   obclient [none]> ALTER SYSTEM DELETE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone_name']
+   obclient [none]> ALTER SYSTEM DELETE SERVER 'svr_ip:svr_port' [,'svr_ip:svr_port'...] [ZONE [=] 'zone_name']
    ```
 
    相关参数说明如下：
 
-   * `ip`：表示待删除的节点所在的主机 IP。
+   * `svr_ip`：表示待删除的节点所在的主机 IP。
 
-   * `port`：表示待删除的节点的 RPC 端口。
+   * `svr_port`：表示待删除的节点的 RPC 端口。
 
    * `zone_name`：待删除的节点所属的 Zone。如果需要删除多个节点，多个节点要求必须在同一 Zone 内。
 
@@ -127,14 +127,14 @@ Cancel Delete Server 的具体操作如下：
    语句如下：
 
    ```sql
-   obclient [none]> ALTER SYSTEM CANCEL DELETE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone_name']
+   obclient [none]> ALTER SYSTEM CANCEL DELETE SERVER 'svr_ip:svr_port' [,'svr_ip:svr_port'...] [ZONE [=] 'zone_name']
    ```
 
    相关参数说明如下：
 
-   * `ip`：表示待取消删除的节点所在的主机 IP。
+   * `svr_ip`：表示待取消删除的节点所在的主机 IP。
 
-   * `port`：表示待取消删除的节点的 RPC 端口。
+   * `svr_port`：表示待取消删除的节点的 RPC 端口。
 
    * `zone_name`：待取消删除的节点所属的 Zone。
 
@@ -163,3 +163,5 @@ Cancel Delete Server 的具体操作如下：
 * [添加节点](2.add-a-node.md)
 
 * [隔离节点](4.isolation-a-node.md)
+
+* [替换节点](7.replace-a-node.md）
