--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -55,7 +55,7 @@
       语句如下：
 
       ```sql
-      ALTER SYSTEM STOP SERVER 'ip:port'; 
+      ALTER SYSTEM STOP SERVER 'svr_ip:svr_port'; 
       ```
 
       示例：
@@ -73,7 +73,7 @@
       语句如下：
 
       ```sql
-      ALTER SYSTEM FORCE STOP SERVER 'ip:port'; 
+      ALTER SYSTEM FORCE STOP SERVER 'svr_ip:svr_port'; 
       ```
 
       示例：
@@ -89,7 +89,7 @@
       语句如下：
 
       ```sql
-      ALTER SYSTEM ISOLATE SERVER 'ip:port'; 
+      ALTER SYSTEM ISOLATE SERVER 'svr_ip:svr_port'; 
       ```
 
       示例：
@@ -150,3 +150,5 @@
 * [添加节点](2.add-a-node.md)
 
 * [删除节点](5.delete-a-node.md)
+
+* [替换节点](7.replace-a-node.md）
