--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
@@ -1,6 +1,6 @@
 # 重启节点
 
-重启是常用运维动作之一，重启节点可以解决 observer 进程的一部分问题，或者对机器进行短暂维修（节点下线时间需要在 `server_permanent_offline_time` 以内，否则会被永久下线）。如果长时间维修，需要走机器替换流程。
+重启是常用运维动作之一，重启节点可以解决 observer 进程的一部分问题，或者对机器进行短暂维修（节点下线时间需要在 `server_permanent_offline_time` 以内，否则会被永久下线）。如果长时间维修，需要走机器替换流程，有关机器替换的详细操作请参见 [替换节点](7.replace-a-node.md)。
 
 <main id="notice" type='explain'>
             <h4>说明</h4>
