--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -24,7 +24,7 @@
 
 4. 以日志流为单位，检查多数派副本的日志是否同步（对比日志流的 Follower 副本 和 Leader 副本 的 RedoLog 延迟是否在 5 秒以内）。如果检查不通过，则不允许对 A 执行 Stop Server 操作。
 
-5. 以上条件检查通过后，设置 A 的 `stop_time` 字段，并等待待A 上的 Leader 全部切走，然后给客户端返回成功。
+5. 以上条件检查通过后，设置 A 的 `stop_time` 字段，并等待A 上的 Leader 全部切走，然后给客户端返回成功。
 
    由于该步骤需要等待 Leader 全部切走，如果该节点上的副本数较多，`STOP SERVER` 命令可能会执行超时，超时后可以重新执行 `STOP SERVER` 命令，直到成功为止。
 
@@ -98,7 +98,7 @@
       obclient [(none)]> ALTER SYSTEM ISOLATE SERVER 'xx.xx.xx.10:2882'; 
       ```
 
-      成功执行 Isolate Server 操作 后，仅表示该节点为 stopped 状态，RS 会尽力将问题节点上的 Leader 切走，此时不能执行第 3 步 Kill observer 进程。如果必须要执行 Kill observer 进程，可能会有如下问题：
+      成功执行 Isolate Server 操作后，仅表示该节点为 stopped 状态，RS 会尽力将问题节点上的 Leader 切走，此时不能执行第 3 步 Kill observer 进程。如果必须要执行 Kill observer 进程，可能会有如下问题：
 
       * 集群中所有日志流副本完好，但问题节点上存在 Leader，Kill observer 进程后会出现部分日志流副本无主选举，短时间影响业务流量。
 
