--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
@@ -107,7 +107,7 @@
 
       * 集群中存在部分日志流已经缺副本，但依然能够达成多数派，Kill observer 进程后会导致部分日志流无法形成多数派，这些日志流在 Kill observer 进程后会长时间无主，长时间影响业务流量。
 
-3. （可选）使用 `kill -9 pid` 命令 Kill observer 进程。
+3. （可选）使用 `kill -9 pid` 命令对问题 Zone 上的节点执行 Kill observer 进程。
 
    具体操作如下：
 
