修订评论问题

--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/1.create-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/1.create-resource-specifications.md
@@ -18,7 +18,7 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_UNIT_CONFIGS` 视图，获取当前租户中的资源配置信息。
+3. 通过 `DBA_OB_UNIT_CONFIGS` 视图，获取资源规格的配置信息。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS;
@@ -60,7 +60,7 @@
 
    `CREATE RESOURCE UNIT` 语句的详细说明，请参见 [CREATE RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/7.create-resource-unit.md)。
 
-5. 查询 `DBA_OB_UNIT_CONFIGS` 视图，确认创建成功。
+5. 查询 `DBA_OB_UNIT_CONFIGS` 视图，确认资源规格创建成功。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS WHERE NAME = 'S1_unit_config';
