--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/10.modify-tenant-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/10.modify-tenant-properties.md
@@ -18,7 +18,9 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_TENANTS` 视图，查看租户 `mq_t1` 的配置信息。
+3. 通过 `DBA_OB_TENANTS` 视图，查看租户的配置信息。
+
+   本示例中查询租户 `mq_t1` 的配置信息。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
@@ -56,7 +58,7 @@
 
     `ALTER TENANT` 语句的详细说明，请参见 [ALTER TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/5.alter-tenant.md)。
 
-5. 查看 `DBA_OB_TENANTS` 视图，确认修改结果。
+5. 查看 `DBA_OB_TENANTS` 视图，确认租户属性修改结果。
 
     结果如下，可以看到 PRIMARY_ZONE、LOCALITY 参数已经更新。
 
