--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/11.tenant-locking-and-unlocking.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/11.tenant-locking-and-unlocking.md
@@ -2,7 +2,7 @@
 
 本文介绍如何进行租户锁定和解锁。
 
-通过 `ALTER TENANT tenantname LOCK|UNLOCK;` 可以对租户进行锁定和解锁。
+通过 `ALTER TENANT` 可以对租户进行锁定和解锁。
 
 对租户进行锁定后，不能在该租户上创建新的连接，已有连接保持不变。如果是应急场景下锁定租户，锁定后需要主动 kill session。
 
@@ -20,7 +20,9 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_TENANTS` 视图，查看租户 `mq_t1` 信息。
+3. 通过 `DBA_OB_TENANTS` 视图，查看租户信息。
+
+   本示例查看租户 `mq_t1` 的信息。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
@@ -43,7 +45,7 @@
 
     `ALTER TENANT` 语句的详细说明，请参见 [ALTER TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/5.alter-tenant.md)。
 
-5. 查看视图，确认修改结果。
+5. 查看 `DBA_OB_TENANTS` 视图，确认租户是否锁定成功。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE LOCKED = 'YES';
