--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
@@ -4,7 +4,7 @@
 
 删除租户可以通过 `DROP TENANT` 语句进行。
 
-删除租户后，租户下的数据库和表也同时被删除。但是租户使用的资源配置不会被删除。资源配置可以继续给其他租户使用。
+删除租户后，租户下的数据库和表也同时被删除。但是租户使用的资源池不会被删除。资源池可以继续给其他租户使用。
 
 * 当系统租户开启回收站功能时，`DROP TENANT` 操作表示删除的租户会进入回收站。对于回收站中的租户，后续系统租户可以通过租户级回收站功能进一步删除或恢复该租户，租户级回收站相关操作请参见 租户回收站。
 
@@ -26,7 +26,9 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_TENANTS` 视图，查看租户 `mq_t1` 的配置信息。
+3. 通过 `DBA_OB_TENANTS` 视图，查看租户信息。
+
+   本示例中查询租户 `mq_t1` 的租户信息。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
@@ -41,6 +43,8 @@
     `DBA_OB_TENANTS` 视图的详细说明，请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)
 
 4. （可选）OceanBase 数据库提供了租户级的回收站功能。在系统租户下可以通过 `SET GLOBAL recyclebin = ON;` 开启回收站功能，使用 `show recyclebin` 语句，可以查看当前系统租户回收站中的对象。
+
+    回收站的详细说明，请参见 [回收站](../../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/4.data-protection/4.recycle-bin.md)。
 
     <main id="notice" type='notice'>
      <h4>注意</h4>
@@ -64,7 +68,7 @@
 
     `DROP TENANT` 语句的详细说明，请参见 [DROP TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/11.drop-tenant.md)。
 
-6. 查看 `DBA_OB_TENANTS` 视图，确认删除成功结果。
+6. 查看 `DBA_OB_TENANTS` 视图，确认租户已经删除成功。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
