--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
@@ -27,7 +27,9 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_RESOURCE_POOLS` 视图，确认资源池 `mq_pool_02` 的配置信息。其中 `TENANT_ID` 为 NULL，说明资源池未被分配，可以执行删除。
+3. 通过 `DBA_OB_RESOURCE_POOLS` 视图，确认资源池的配置信息。其中 `TENANT_ID` 为 NULL，说明资源池未被分配，可以执行删除。
+
+   本示例查询 `mq_pool_02` 的配置信息。
 
     ```sql
     obclient [oceanbase]> SELECT TENANT_ID,NAME FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_02';
@@ -50,7 +52,7 @@
 
     `DROP RESOURCE POOL` 语句的详细说明，请参见 [DROP RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/9.drop-resource-pool.md)。
 
-5. 查看 `DBA_OB_RESOURCE_POOLS` 视图，确认删除成功。
+5. 查看 `DBA_OB_RESOURCE_POOLS` 视图，确认资源池删除成功。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_02';
