--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/15.delete-resource-specification.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/15.delete-resource-specification.md
@@ -52,7 +52,7 @@
 
     `DROP RESOURCE UNIT` 语句的详细说明，请参见 [DROP RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/10.drop-resource-unit.md)。
 
-5. 查看 `DBA_OB_UNIT_CONFIGS` 视图，确认删除成功。
+5. 查看 `DBA_OB_UNIT_CONFIGS` 视图，确认资源规格删除成功。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS WHERE NAME = 'S2_unit_config';
