--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/2.create-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/2.create-resource-pool.md
@@ -20,7 +20,7 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_RESOURCE_POOLS` 视图，获取资源配置信息。
+3. 通过 `DBA_OB_RESOURCE_POOLS` 视图，获取资源池的配置信息。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS;
@@ -59,7 +59,7 @@
 
    `CREATE RESOURCE POOL` 语句的详细说明，请参见 [CREATE RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/6.create-resource-pool.md)。
 
-5. 查询 `DBA_OB_RESOURCE_POOLS` 视图，确认创建成功。
+5. 查询 `DBA_OB_RESOURCE_POOLS` 视图，确认资源池创建成功。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_01';
