--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
@@ -88,7 +88,7 @@
 
    `CREATE TENANT` 语句的详细说明，请参见 [CREATE TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/8.create-tenant.md)。
 
-5. 查询 `DBA_OB_TENANTS` 视图，确认创建成功。
+5. 查询 `DBA_OB_TENANTS` 视图，确认租户创建成功。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
