--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -2,19 +2,21 @@
 
 本文介绍如何修改租户系统变量。
 
-系统租户变量可以通过 `SET` 语句修改。
+租户的系统变量可以通过 `SET` 语句修改。
 
 * 设置 Session 级别的变量仅对当前 Session 有效，对其他 Session 无效。
 * 设置 Global 级别的变量对当前 Session 无效，需要重新登录后，建立新的 Session 才会生效。
 
   <main id="notice" type='notice'>
    <h4>注意</h4>
-   <p>设置 Global 级别变量要求当前用户拥有 SUPER 权限或 ALTER SYSTEM 权限。</p>
+   <p>设置 Global 级别变量要求当前用户拥有 SUPER 权限或 ALTER SYSTEM 权限。</br>设置前，请确认您的权限。用户权限的详细说明，参见 <a xref="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md">用户权限概述</a>。</p>
   </main>
 
 ## 操作步骤
 
-1. 登录数据库
+1. 登使用 root 用户登录到数据库的用户租户。
+
+   本示例中使用 `mq_t1` 租户。 
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
@@ -114,8 +116,10 @@
 
 ```sql
 SET @@foreign_key_checks = ON;
-
 SET @@foreign_key_checks = 1;
+
+SET GLOBAL foreign_key_checks = ON;
+SET GLOBAL foreign_key_checks = 1;
 ```
 
 <main id="notice" type='explain'>
