--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
@@ -4,7 +4,9 @@
 
 ## 通过 SHOW 语句查看租户系统变量
 
-1. 使用 root 用户登录到数据库的 `mq_t1` 租户。
+1. 使用 root 用户登录到数据库的用户租户。
+
+   本示例中使用 `mq_t1`  租户。
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
