--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.modify-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.modify-resource-specifications.md
@@ -1,10 +1,10 @@
 # 修改资源规格
 
-修改资源规格，即是调整资源你规格中的 CPU、Memory 等参数的值。本文介绍如何修改资源规格。
+修改资源规格，即是调整资源规格中的 CPU、Memory 等参数的值。本文介绍如何修改资源规格。
 
 ## 前提条件
 
-在修改资源单元配置前，如果该资源单元配置正在被租户使用并且确认需要增加资源，则在增加资源的过程中必须保证 OBServer 有足够的剩余资源可用于分配。您可以通过 `GV$OB_SERVERS` 视图来查询节点总资源和已经分配的资源，然后通过计算来确定是否可以修改资源单元配置。`GV$OB_SERVERS` 视图详细介绍，请参见 [oceanbase.GV$OB_SERVERS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/13.gv-ob_units-of-mysql-mode.md)。
+在修改资源规格前，如果该资源规格正在被租户使用并且确认需要增加资源，则在增加资源的过程中必须保证 OBServer 有足够的剩余资源可用于分配。您可以通过 `GV$OB_SERVERS` 视图来查询节点总资源和已经分配的资源，然后通过计算来确定是否可以修改资源规格。`GV$OB_SERVERS` 视图详细介绍，请参见 [oceanbase.GV$OB_SERVERS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/13.gv-ob_units-of-mysql-mode.md)。
 
 ## 操作步骤
 
@@ -20,7 +20,9 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_UNIT_CONFIGS` 视图，获取资源规格 `S1_unit_config` 的配置信息。
+3. 通过 `DBA_OB_UNIT_CONFIGS` 视图，获取资源规格的配置信息。
+
+   本示例中查询资源单元 `S1_unit_config` 的配置信息。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS WHERE NAME = 'S1_unit_config';
@@ -43,7 +45,7 @@
 
     `ALTER RESOURCE UNIT` 语句的详细说明，请参见 [ALTER RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/4.alter-resource-unit.md)。
 
-5. 查看 `DBA_OB_UNIT_CONFIGS` 视图，确认修改完成。
+5. 查看 `DBA_OB_UNIT_CONFIGS` 视图，确认资源规格配置修改完成。
 
     ```sql
     obclient [oceanbase]> ALTER RESOURCE UNIT S1_unit_config MAX_CPU 2, MEMORY_SIZE '4G';
