--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
@@ -25,7 +25,9 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_RESOURCE_POOLS` 视图，获取资源池 `mq_pool_02` 的配置信息。
+3. 通过 `DBA_OB_RESOURCE_POOLS` 视图，获取资源池的配置信息。
+
+    本示例中查询资源池 `mq_pool_02` 的配置信息。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_02';
@@ -86,7 +88,7 @@
 
     `ALTER RESOURCE POOL` 语句的详细说明，请参见 [ALTER RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)。
 
-5. 查看 `DBA_OB_RESOURCE_POOLS` 视图，确认修改结果。
+5. 查看 `DBA_OB_RESOURCE_POOLS` 视图，确认资源池配置修改结果。
 
     结果如下，可以看到 `UNIT_COUNT`、`UNIT_CONFIG_ID`、`ZONE_LIST` 参数已经更新。
 
